[FIX] process bar size and spacing between calendar and processbar

--- a/Paperwork-Front-Web/src/styles/Profile.css
+++ b/Paperwork-Front-Web/src/styles/Profile.css
@@ -52,16 +52,16 @@
 }
 
 .Profil-ProcessBar {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     border-radius: 10px;
     width: 70%;
     border: 1px solid lightgray;
 }
 
 .Profile-ProcessText {
-    margin-top: 5px;
-    margin-left: 10px;
+    margin-top: 25px;
+    margin-left: 10%;
     font-weight: bold;
     font-size: larger;
 }
@@ -69,4 +69,8 @@
 .Profile-ProcessDiagText {
     transform: rotate(45deg);
     font-size: xx-small;
+}
+
+.ProfilTextLabel {
+    margin-left: 20%;
 }
